feat: update documentation
