# src/routes/checkRoutes.ts
@@ -1,9 +1,22 @@
-import { Router } from "express";
+import { Request, Response, Router } from "express";
 import { CheckController } from "../controllers/CheckController";
 
 const checkController = new CheckController();
 const checkRoutes = Router();
 
-checkRoutes.get("/", checkController.ping);
+checkRoutes.get("/ping", 
+  /*
+    #swagger.tags = ['Check']
+    #swagger.responses[200] = {
+      content: {
+        "text/plain": {
+          "schema": {
+            "type": "string"
+          }
+        }           
+      }
+    }   
+  */
+  checkController.ping);
 
 export { checkRoutes };
